welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	while(!finalPos){
		avance();
	}
}



def finalPos():Boolean {
	var j:Int=0
	while(estFaceMur){
		setDirection(Direction.EST);
		if (estFaceMur){
			j = 1
		}else{
			j = 0
		}
		
	}
	if(j==0){
		return false
	}else{
		return true
	}
}
